<resources>

    <string name="app_name">ESPN Fanbook</string>
    <string name="espn">ESPN</string>
    <string name="gtri">GTRI</string>
    <string name="georgia_tech_yellow_jackets">Georgia Tech Yellow Jackets</string>
    <string name="copyright">Copyright Information</string>
    <string name="none"></string>
    <string name="login_facebook">Login with Facebook!</string>
    <string name="login_email">Email Login</string>
    <string name="games">Games</string>
    <string name="huddles">Huddles</string>
    <string name="friends">Friends</string>
    <string name="login_description_email">Use any email address to keep track of scores! Simple and easy!</string>
    <string name="login_description_facebook">Challenge friends by logging in with Facebook.</string>
    <string name="welcome">Welcome, friend!</string>
    <string name="login_email_description">Simply enter a unique email address to register! It\'s that easy!</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="username_pick">Pick a user name!</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="login_username_description">The username will be how other users contact you in game, so pick wisely!</string>
    <string name="login_email_example">john_doe@example.com</string>
    <string name="login_username_example">John Doe</string>
    <string name="login_enter_email">Enter an email address.</string>
    <string name="login_username_enter">Enter a username.</string>
    <string name="menu_settings">Settings</string>
    <string name="create_game">New Game</string>
    <string name="predict_comment">Post a comment here</string>
    <string name="title_activity_layout_activity_main">MainActivity</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_login_email">LoginEmailActivity</string>
    <string name="title_activity_login_username">LoginUsernameActivity</string>
    <string name="title_activity_event_list">GameListActivity</string>
    <string name="title_activity_event_info">GameInfoActivity</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_friend_info">FriendInfoActivity</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="title_activity_huddle">HuddleActivity</string>
    <string name="title_activity_participant_info">ParticipantInfoActivity</string>
    <string name="title_activity_play_stats">PlayStatsActivity</string>
    <string name="title_activity_play_selection">PlaySelectionActivity</string>
    <string name="title_dialog_create_group">CreateGroupDialog</string>
    <string name="title_activity_predict">PredictActivity</string>
    <string name="preferences_file">org.gtri.espn_prefs</string>
    <string name="firstRun">firstRun</string>
    <string name="splashActive">splashActive</string>
    <string name="confirmQuit">confirmQuit</string>
    <string name="settingsEmail">settings_email</string>
    <string name="settingsUsername">settings_username</string>
    <string name="settingsFavorite">settings_favorite</string>
    <string name="accessToken">access_token</string>
    <string name="accessExpires">access_expires</string>
    <string name="email">email</string>
    <string name="publishStream">publish_stream</string>
    <string name="LogoutUser">Logout</string>
    <string name="settings">Settings</string>
    <string name="splashScreen">Splash screen on start</string>
    <string name="confirmExit">Confirm on exit</string>
    <string name="textViewLogout">Logout current user</string>
    <string name="dialog_quit">Quit</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_confirm">Are you sure?</string>
    <string name="dialog_confirm_logout">Are you sure?\nAll local settings on this device will be erased.</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_logout_description">User logged out.</string>
    <string name="contentDescription_espn">The ESPN logo</string>
    <string name="contentDescription_newGame">Click to create a new game!</string>
    <string name="notification_test">Notification Test</string>
    <string name="login_type">Login Type</string>
    <string name="groups">Groups</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove">Remove</string>
    <string name="example_friend_name">Matthew Compton</string>
    <string name="create_group">Create Group</string>
    <string name="leave">Leave</string>
    <string name="example_group">GT Fans</string>
    <string name="huddle">Huddle!</string>
    <string name="example_game">GT vs. UGA</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="leave_group">Leave Group</string>
    <string name="example_team">Georgia Tech</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_participant_list">ParticipantListActivity</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="teams">Teams</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="home">Home</string>
    <string name="favorites">Favorite Teams</string>
    <string name="current_huddles">Current Huddles</string>
    <string name="none_literal">None</string>
    <string name="invite_friends">Invite a Friend</string>
    <string name="invite_group">Invite a Group</string>
    <string name="create">Create</string>
    <string name="hint_create_group">Group Name</string>
    <string name="dialog_create_group_title">Create a Group</string>
    <string name="list_empty_events">No Listed Games</string>
    <string name="list_empty_groups">No Current Groups</string>
    <string name="list_empty_favorites">No Favorite Teams </string>
    <string name="list_empty_huddles">No Current Huddles</string>
    <string name="list_empty_participants">No Teams Found</string>
    <string name="list_empty_huddle_members">No Other Members</string>
    <string name="list_empty_group_members">No Other Members</string>
    <string name="list_empty_friends">No Current Friends</string>
    <string name="group_members">Group Members</string>
    <string name="search_bar">Search by Name</string>
    <string name="go">Go</string>
    <string name="title_dialog_favorite_team">FavoriteTeamDialog</string>
    <string name="title_dialog_reset_team">ResetTeamDialog</string>
    <string name="title_dialog_menu">MenuDialog</string>
    <string name="title_activity_play_stats">PlayStatsActivity</string>
    <string name="okay">Okay</string>
    <string name="number_one">Who\'s #1?</string>
    <string name="select_favorite">Select Favorites</string>
    <string name="choose_favorite_team">Reset favorite team:</string>
    <string name="reset">Reset</string>
    <string name="favorite">Favorite Team</string>
    <string name="logout_current_user">Logout current user</string>
    <string name="current_user">Current user:</string>
    <string name="add_watched">Add to Watched</string>
    <string name="set_favorite">Set as Favorite</string>
    <string name="watched_teams">Watched Teams</string>
    <string name="list_empty_watched">No Watched Teams</string>
    <string name="select_community">Select a Community</string>
    <string name="title_activity_manage_newsfeed">Manage Newsfeed</string>
    <string name="online">online</string>

    <string-array name="status">
        <item>Online</item>
        <item>Away</item>
        <item>Busy</item>
        <item>Offline</item>
    </string-array>

    <string name="title_activity_manage_huddles">Manage Huddles</string>
    <string name="title_activity_manage_profiles">Manage Profiles</string>

</resources>